In clientAppend(), be careful how the arguments for the APPEND command are constructed so as not to break things.

Found by Luke Dashjr <luke-jr+git@utopios.org>
with help from Andreas. Thanks guys.
Please test this.

BUG: 289084
FIXED-IN: 4.8.0